# VlorQl

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  deny.toml  docker-compose.observability.yml  prometheus.yml
.github/workflows/: ci.yml
crates/vlorql/: Cargo.toml
crates/vlorql-cli/: Cargo.toml
crates/vlorql-cli/src/: main.rs
crates/vlorql-core/: Cargo.toml
crates/vlorql-core/benches/: cache_bench.rs  concurrent.rs  optimizer_bench.rs  query_compilation.rs  schema_validation.rs
crates/vlorql-core/src/: lib.rs  query.rs
crates/vlorql-core/src/cache/: compile_cache.rs  key.rs  mod.rs  normalize.rs  prompt_cache.rs  schema_cache.rs  traits.rs
crates/vlorql-core/src/compile/: builder.rs  dialect_config.rs  mod.rs  mysql.rs  postgres.rs  registry.rs  rewrite.rs  sqlite.rs  types.rs
crates/vlorql-core/src/errors/: kinds.rs  mod.rs
crates/vlorql-core/src/fix/: aggregates.rs  column_table.rs  columns.rs  group_by.rs  joins.rs  mod.rs
crates/vlorql-core/src/function/: builder.rs  builtin.rs  def.rs  mod.rs  registry.rs
crates/vlorql-core/src/observability/: init.rs  metrics.rs  mod.rs
crates/vlorql-core/src/optimizer/: analyze.rs  fold.rs  join_reorder.rs  mod.rs  optimizer.rs  prune.rs  pushdown.rs  rules.rs  visitor.rs
crates/vlorql-core/src/policy/: config.rs  engine.rs  mod.rs
crates/vlorql-core/src/prompt/: builder.rs  mod.rs  skill.rs
crates/vlorql-core/src/schema/: dialect.rs  expressions.rs  mod.rs  query_plan.rs  snapshot.rs  types.rs
crates/vlorql-core/src/statistics/: cardinality.rs  cost.rs  mod.rs  providers.rs  stats.rs
crates/vlorql-core/src/validate/: dialect.rs  mod.rs  operand.rs  pipeline.rs  schema.rs
crates/vlorql-core/tests/: check_prompt.rs
crates/vlorql-llm/: Cargo.toml
crates/vlorql-llm/examples/: local_ollama.rs  local_vllm.rs  multi_provider.rs
crates/vlorql-llm/src/: anthropic.rs  deepseek.rs  lib.rs  local.rs  zhipu.rs
crates/vlorql-llm/src/parse/: build.rs  canonicalize.rs  mod.rs  recover.rs
crates/vlorql-llm/src/parser_v2/: mod.rs  pipeline.rs
crates/vlorql-llm/src/parser_v2/builder/: expr_builder.rs  join_builder.rs  mod.rs  query_builder.rs  select_builder.rs  table_builder.rs
crates/vlorql-llm/src/parser_v2/fix/: fixer.rs  mod.rs
crates/vlorql-llm/src/parser_v2/normalize/: aliases.rs  array.rs  common.rs  expr.rs  join.rs  mod.rs  operators.rs  order.rs  pipeline.rs  query.rs  select.rs  table.rs  value.rs  where_.rs
crates/vlorql-llm/src/parser_v2/optimize/: mod.rs  predicate.rs  projection.rs  rewrite.rs
crates/vlorql-llm/src/parser_v2/recover/: bracket.rs  extract.rs  json.rs  markdown.rs  mod.rs
crates/vlorql-llm/src/parser_v2/validate/: mod.rs  semantic.rs  validator.rs
crates/vlorql-llm/tests/: bench_profile.rs  golden_test.rs
crates/vlorql-llm/tests/golden/: mod.rs
crates/vlorql-llm/tests/integration/: multi_provider.rs
crates/vlorql-llm/tests/parser_v2/: expression_test.rs  fix_test.rs  normalize_test.rs  optimize_test.rs  pipeline_test.rs  recover_test.rs  structure_test.rs  validate_test.rs
crates/vlorql/examples/: basic_query.rs  custom_compiler.rs  end_to_end_pg.rs  multi_dialect.rs  stream_query.rs  with_caching.rs  with_observability.rs  with_optimization.rs  with_policy.rs
crates/vlorql/src/: lib.rs
crates/vlorql/tests/: integration.rs
crates/vlorql/tests/integration/: cache_integration.rs  common.rs  dialect_compilation.rs  end_to_end.rs  error_recovery.rs  observability.rs  optimizer_tests.rs  policy_enforcement.rs
crates/vlorql/tests/security/: dialect_bypass.rs  malformed_json.rs  policy_bypass.rs  sql_injection.rs
docs/: BENCHMARKS.md  SUMMARY.md  guide.md  optimization.md
docs/en/: SUMMARY.md  caching.md  deployment.md  guide.md  observability.md  optimization.md
docs/superpowers/: 01_architecture_overview.md  02_architecture_issues.md  03_detailed_design.md  04_execution_plan.md  05_ollama_validation_report.md  06_pure_llm_validation_report.md
docs/superpowers/plans/: 2025-07-24-dialect-adapter-system.md
docs/superpowers/specs/: 2025-07-24-dialect-adapter-system-design.md  2026-07-24-schema-aware-fixer-design.md
docs/zh/: BENCHMARKS.md  SUMMARY.md  caching.md  deployment.md  guide.md  observability.md  optimization.md
examples/: custom-dialect.toml  rewrite-rules.toml  small-model-skill.toml
