[workspace]
members = [
    "crates/vlorql-core",
    "crates/vlorql-llm",
    "crates/vlorql-cli",
    "crates/vlorql",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
derive_builder = "0.12"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
mockall = "0.12"
rstest = "0.18"
mockito = "1.7"
clap = { version = "4.0", features = ["derive", "env"] }
toml = "0.8"
futures = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
