[package]
name = "vlorql-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for VlorQl SQL query optimization and natural language querying"

[dependencies]
vlorql = { path = "../vlorql", version = "0.2.1" }
vlorql-core = { path = "../vlorql-core", version = "0.2.1" }
vlorql-llm = { path = "../vlorql-llm", version = "0.2.1" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
