[package]
name = "vlorql-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-performance SQL query optimizer with constant folding, predicate pushdown, column pruning, and cost-based join reordering"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_builder.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh3"] }
moka = { version = "0.12", features = ["future"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
criterion.workspace = true
tokio = { workspace = true }
serde_json.workspace = true
futures.workspace = true

[[bench]]
name = "schema_validation"
path = "benches/schema_validation.rs"
harness = false

[[bench]]
name = "query_compilation"
path = "benches/query_compilation.rs"
harness = false

[[bench]]
name = "concurrent"
path = "benches/concurrent.rs"
harness = false

[[bench]]
name = "optimizer_bench"
path = "benches/optimizer_bench.rs"
harness = false

[[bench]]
name = "cache_bench"
path = "benches/cache_bench.rs"
harness = false
