[package]
name = "vlorql-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-provider LLM client for SQL query generation supporting Anthropic, DeepSeek, Zhipu, and local models"

[dependencies]
vlorql-core = { path = "../vlorql-core", version = "0.2.1" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream.workspace = true
futures.workspace = true
futures-util.workspace = true

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
mockito.workspace = true
tracing-subscriber.workspace = true

[[test]]
name = "multi_provider"
path = "tests/integration/multi_provider.rs"

[[test]]
name = "parser_v2_recover"
path = "tests/parser_v2/recover_test.rs"

[[test]]
name = "parser_v2_normalize"
path = "tests/parser_v2/normalize_test.rs"

[[test]]
name = "parser_v2_structure"
path = "tests/parser_v2/structure_test.rs"

[[test]]
name = "parser_v2_expression"
path = "tests/parser_v2/expression_test.rs"

[[test]]
name = "parser_v2_pipeline"
path = "tests/parser_v2/pipeline_test.rs"

[[test]]
name = "parser_v2_validate"
path = "tests/parser_v2/validate_test.rs"

[[test]]
name = "parser_v2_fix"
path = "tests/parser_v2/fix_test.rs"

[[test]]
name = "parser_v2_optimize"
path = "tests/parser_v2/optimize_test.rs"

[[test]]
name = "golden_test"
path = "tests/golden_test.rs"

[[test]]
name = "bench_profile"
path = "tests/bench_profile.rs"
