[package]
name = "vlorql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
vlorql-core = { path = "../vlorql-core", version = "0.1.0" }
vlorql-llm = { path = "../vlorql-llm", version = "0.1.0" }
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
rstest.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tokio-postgres = "0.7"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "security_sql_injection"
path = "tests/security/sql_injection.rs"

[[test]]
name = "security_policy_bypass"
path = "tests/security/policy_bypass.rs"

[[test]]
name = "security_dialect_bypass"
path = "tests/security/dialect_bypass.rs"

[[test]]
name = "security_malformed_json"
path = "tests/security/malformed_json.rs"
