[package]
name = "vlorql"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-level SQL query optimization and LLM-powered natural language querying library"

[dependencies]
vlorql-core = { path = "../vlorql-core", version = "0.2.0" }
vlorql-llm = { path = "../vlorql-llm", version = "0.2.0" }
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
rstest.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
rustls = "0.23"
webpki-roots = "0.26"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "security_sql_injection"
path = "tests/security/sql_injection.rs"

[[test]]
name = "security_policy_bypass"
path = "tests/security/policy_bypass.rs"

[[test]]
name = "security_dialect_bypass"
path = "tests/security/dialect_bypass.rs"

[[test]]
name = "security_malformed_json"
path = "tests/security/malformed_json.rs"
