[package]
name = "vlorql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level SQL query optimization and LLM-powered natural language querying library"

[package.metadata.husky.hooks]
pre-commit = "cargo fmt --all -- --check && cargo clippy --workspace --all-targets -- -D warnings"

[build-dependencies]
cargo-husky = "1"

[dependencies]
vlorql-core = { path = "../vlorql-core", version = "0.2.0" }
vlorql-llm = { path = "../vlorql-llm", version = "0.2.0" }
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
rstest.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.12"
rustls = "0.23"
webpki-roots = "0.26"
bytes.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "security_sql_injection"
path = "tests/security/sql_injection.rs"

[[test]]
name = "security_policy_bypass"
path = "tests/security/policy_bypass.rs"

[[test]]
name = "security_dialect_bypass"
path = "tests/security/dialect_bypass.rs"

[[test]]
name = "security_malformed_json"
path = "tests/security/malformed_json.rs"
